--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,21 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
+org.gradle.parallel=true
+
+# IntelliJ IDEA is not yet fully compatible with configuration cache, see: https://github.com/FabricMC/fabric-loom/issues/1349
+org.gradle.configuration-cache=false
 
 # Fabric Properties
-	# check these on https://modmuss50.me/fabric.html
-	minecraft_version=1.21.10
-	yarn_mappings=1.21.10+build.2
-	loader_version=0.18.0
+# check these on https://fabricmc.net/develop
+minecraft_version=1.21.10
+yarn_mappings=1.21.10+build.2
+loader_version=0.18.1
+loom_version=1.13-SNAPSHOT
 
 # Mod Properties
-	mod_version = 1.1
-	maven_group = yolojj333
-	archives_base_name = survival-server-mod
+mod_version=1.0
+maven_group=yolojj333.survival
+archives_base_name=survival-server-mod
 
 # Dependencies
-	# check this on https://modmuss50.me/fabric.html
-	fabric_version=0.138.3+1.21.10
+fabric_version=0.138.3+1.21.10
